# ChangeLog for media-fonts/terminus-font
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.103 2015/02/08 19:39:17 floppym Exp $

  08 Feb 2015; Mike Gilbert <floppym@gentoo.org> terminus-font-4.39.ebuild:
  Install 75-yes-terminus.conf.

  09 Sep 2014; Mike Frysinger <vapier@gentoo.org> terminus-font-4.39.ebuild:
  Fix typo in install when USE=-pcf.

*terminus-font-4.39 (09 Sep 2014)

  09 Sep 2014; Mike Frysinger <vapier@gentoo.org> +terminus-font-4.39.ebuild:
  Version bump #509860 by bill.

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for sparc, wrt bug #448010

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for ppc64, wrt bug #448010

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for alpha, wrt bug #448010

  29 Aug 2013; Markus Meier <maekke@gentoo.org> terminus-font-4.38.ebuild:
  arm stable, bug #448010

  29 Aug 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for ia64, wrt bug #448010

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for x86, wrt bug #448010

  28 Aug 2013; Chema Alonso <nimiux@gentoo.org> terminus-font-4.38.ebuild:
  Stable for amd64 wrt bug #448010

  26 Aug 2013; Agostino Sarubbo <ago@gentoo.org> terminus-font-4.38.ebuild:
  Stable for ppc, wrt bug #448010

  26 Aug 2013; Jeroen Roovers <jer@gentoo.org> terminus-font-4.38.ebuild:
  Stable for HPPA (bug #448010).

  10 Feb 2013; Christoph Junghans <ottxor@gentoo.org> terminus-font-4.36.ebuild,
  terminus-font-4.38.ebuild:
  fixed awk deps (bug #455732)

  29 Aug 2012; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  terminus-font-4.38.ebuild:
  Rename center-tilde useflag (bug #432886). Remove unnecessary dies (eapi=4).

  21 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml,
  terminus-font-4.38.ebuild: