@@ -6,13 +6,26 @@ DIST terminus-font-4.38.tar.gz 316507 SHA256 f6f4876a4dabe6a37c270c20bb9e141e38f
 DIST terminus-font-4.39.tar.gz 324890 SHA256 3108383986b365a4b9cc08c31a4195196f6de974d2735d77f6c6efa9feb1f5bf SHA512 d2b1c55584eabf423a455ea11d90ba8037b4e5823c677a8c604de1e41c55d829b743db2d1932cd755064db681fcd0b5be8484439ddde4394955d0af5174ff591 WHIRLPOOL 00f2e84660e492cd0a047fa0d636dda39b48248f0ce490e4b0dac74425d378a657ebe73c7f234d6681a4ae18cd53acf53c2234368e727bd35b370884db4e8d84
 EBUILD terminus-font-4.36.ebuild 2552 SHA256 173d595e5800378c0963e6ec64d0d4fb95903f9008edeabcdbd7ce834ecc90ff SHA512 8d52840b8113a2c7f0780dc137b23caf4b82798420e525b6ed18e138f168ca6d05ddec3aef408557d104a0876930f200a17757e4959c3d55ab4ea70c1b271029 WHIRLPOOL c92b91020cc5fe4ab3e548683a33a9c8ddb79e60741ee7e6c8b6366841e604aa885237660d8c39af71cde0b63e176cd000beeffaf0d65daf357f2bb339b1d486
 EBUILD terminus-font-4.38.ebuild 2304 SHA256 c7dd8cf4473258f79f7b9f0bac047d5f4cbe363c1d5fc91d689d91d58be8b383 SHA512 32de3acc2feca96d1e5fc7ac14c50657181bfe9cf7d6373fb7428131ae63a4b85255bd078a03a1218e0ec7905b123f712a9dd24c68d6be681ef9a7f3ed516eb6 WHIRLPOOL 3602ab179b345a2a12be9e87ac753a095e438b877dbd964e3b8776ac1f423c000686aa9a1357ce7d3f0bff4eaf68bd5204c1bc9ff89314564dbe3082a7d8951a
+EBUILD terminus-font-4.39-r1.ebuild 2841 SHA256 997de8cdaf9b6ba4db9f3d75ded4244c029b0712828734fee2ac290a8e1509e5 SHA512 42ca9e27bdf67353992146f82c7589f22db51717e50b7843b0bdf9c4551d7327e956126a7d8bbf521c708e5190d9d09301801b026001d38f7f8be337746cf764 WHIRLPOOL d57b938f49e3a1a6620d6eb1e5791e2caa41e9ac54f39f5c579de5d0c69b47fba964f3db0fcadb634a1c6f6f091a3c1d37f14af29286dde9ad5b3bc9d3ce2588
 EBUILD terminus-font-4.39.ebuild 2661 SHA256 abf5d8521f54663e05b78c1f19cc6a2ce8551ae92ba78536eaaaee131d48121b SHA512 947b4e57c2a4314de3c1af434b753cea18aaabece41b12ee8ba415356fc9a9165e17a808b79dc173cdb7a03cb0c42a56762daaab1da9326476fa28177f381002 WHIRLPOOL 4c50b04a2f6617b1af03de9035e91bfe1bac19cf010aac93aaf7cdce6c313cee49b8d6c1432abca5f97e71dabfa3ec90026b7ddfecc78a10b084c5fd1c137034
-MISC ChangeLog 14702 SHA256 d52122bdfa1cc615b3b8bca04ea39916f6fdcd22427c4b75d5f1d1dc36dae439 SHA512 6831ffba6bc46b042bd3501a800e9332f66c5c51cbe6c7c09bbfad2333cbf321ef8b495489ee4aaad933d169cf8434131cab8ce19c337e52154cd1e8323554a0 WHIRLPOOL c6bb21f5bea809b47192ae315deeb70344675c8cf38ceb3c05caa37cf843796e07085f45d28199759ca398b49bb8ad2b189d0829615b4af9b229a1fd9f40ee28
-MISC metadata.xml 1430 SHA256 d482e291cf08a3bc4e4b2cc6157df02def9f683c35234fea5e8fcbb500c0b090 SHA512 e8ff7722b6810604b8a564e3be6a5a972fa96cd639a8445dda14394eaa81c77f41c7b3bdeaf04ad63c6682393dbf24d08032920a62e52fc4cf96b29f3d972023 WHIRLPOOL e6cb694c18142bad1a8b874d896cfe1d5c79d246782f5407a123d1e73e0e33e99ce5dc3ff297b15e3489fcfeb1ceeac3fba2cbd7388d4b4c7e75dcfb3cb894a1
+MISC ChangeLog 14950 SHA256 7f3936205425711b94e917d2adc1ce34eb414b797edea27275563e34de40b734 SHA512 fed3c1ec6e0c385c9b4e3c74ad884a1486ef0b423fc0512bdb3064288828e6893d71de04e78b3d4c4cd1cbc677b47bee801f45dc9144545b7ea04b6b60c07c39 WHIRLPOOL 859f2739d0ccb51b8de23b4b36c8b50d00a1042a707b86cb780955e6e57328de207146921c71425d9a09810befb2f377a3709c946f4e8021aab929cf09b8a678
+MISC metadata.xml 1553 SHA256 233b8e1f7fe0a4dd2792029dbe0247ef0c3b6f09d204034b3b4717d3cd1bd591 SHA512 ba3332e3b488f4f3598e3bcef596f98b16f606839b11ccf3a0d808fdfe3fe0419f29e1116b5f3da745ecb372452128d78be3f8d32d473bc16a9ada7705dcb8a4 WHIRLPOOL 13c594a77e759b6b20eb84235a5d2bfdd00e1c4936d1ddbdb8c48ddbe98ed57326feb41d858b323b1a396e0d7a47c31f467e550820c7c2dd08041c6f939e5f6e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iF4EAREIAAYFAlTXu2YACgkQC77qH+pIQ6T/jQEAoAJqbLQCXK1t06DNEq7RgE3D
-bynOYSnwX5BUjBVlsjwA/2g8BX3SyLPAHQGi+INYG+HEfzlhrA95C0YMxc2PSxYk
-=LCWL
+iQJ8BAEBCABmBQJU2badXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOQlwP/jZckLTkPLTbug9qw6lau8s1
+YU09yi8ul4HznXEUU4HeMRaE4iLyQ9AqMJIIMwavY/gF1KyYV12imLJF3/w+O6Qz
+MqR5ni7XzPgqpm88qf5Ks47f6SRgqeP/Ed8JlTGMFIPBa4twSDKqvu5MJBT3eZEj
+ysfyxmGC2dLDTDcp9RPffi1/vr5MN2pwV/e58kWn9zVXy9JZUqRInoykuxS+iXFa
+6EY2AJpR1h+X1RZeVOek4paDykwYp60JncXlpfSB9p18wVe8fsfbvb3iQClwdQO5
+k37t4XGnAYU+FUzOdeLF3iY26uko96MZFyyqtJ15aJ17OWVCpRoltM0xIAL7K7yj
+bhzd3ynyhaRFZiGlRE8A6sqpfFAhyO0Bpm3FCW3KLG6tSrkJsWbM9OX2E87EfFtP
+rcrG7F46NEbryCp6IHvkbcKfrHbhAKVdJLBAriVwlFkfqJF1SKVLzPDdWJwx03b8
+xyV7e2j3GpGZwUBDyrCnbioeKEKr4I4CitgYSe84FumbcoXfZ+Gz2WSLsCCU19js
+ykXpREZoqzlYqxsXL6nHhpSNX4l/Ov2gSZdAt69b+pnGKOzKybco/tf2Kdp8XPd1
+5TVjJq8Rrvl0REnfI2FyxCtN8G7iXlAewmpIukS2pyGzpvE2WgIzzssx52rtjSTK
+zQ1t8t7bJFVmOFouyLH8
+=1M4C
 -----END PGP SIGNATURE-----
