@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup
+DEPEND=app-arch/gzip dev-lang/perl virtual/awk pcf? ( x11-apps/bdftopcf ) X? ( x11-apps/mkfontdir media-fonts/encodings )
+DESCRIPTION=A clean fixed font for the console and X11
+EAPI=5
+HOMEPAGE=http://terminus-font.sourceforge.net/
+IUSE=a-like-o +center-tilde distinct-l +pcf +pcf-unicode-only +psf quote raw-font-data ru-dv +ru-g ru-i ru-k X
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+LICENSE=OFL-1.1 GPL-2
+REQUIRED_USE=X? ( pcf )
+SLOT=0
+SRC_URI=mirror://sourceforge/terminus-font/terminus-font-4.39/terminus-font-4.39.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	font	37271e0911f39dd15a28adcaf94f6956	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=d6d192b453705bbcfcb4a04641b44771
