@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX blas.pc.in 305 SHA256 1e87f717f13a36b81faaa12d45bd08e5add3b9f7977a9b6b43105ca10822e2a3 SHA512 6cd3d4067b0eaef5d2ebf16c0e344fd1aeefc60b3089359defc421703fc94bf2990119360b2b6317587a595e5246d2f2c429f450c49868269f48fad7a5e4f0e3 WHIRLPOOL 05410c2c3e7032e9052ccb2f2be97be0772706f5e6f2d4f66b44d77528cea28ba1e5a71ef042930e7532ac2f92788cdab744cd423d904b61b86c9de37ed062c1
 AUX lapack.pc.in 300 SHA256 1ed9c723892aa4c614738a1dfda4216ce0d596380d733495b351dd8770c450f5 SHA512 c311d839244a7b778245e37bcfee66c25a8282236ea6825cae11ec4a925567236ccbfdfdd62813176a826ef9f59ca6267dee0d4c0b75eb7be774b532aa0f2f97 WHIRLPOOL e19a9c51132aa9436fcebb1488eaf45e6ed305092bad374bb72b93be4247f8d262c13d89437aecb5f61df2c7a7d849277f67343936a4b9ca6ce167937ed7794c
 DIST acml-3-6-1-gfortran-32bit.tgz 17682562 SHA256 adec95c65d1042c65fa1490978b76042c3bf9670df7c226cd28431473985898c
@@ -14,6 +17,25 @@ DIST acml-4-1-0-ifort-64bit-int64.tgz 36135363 SHA256 3da0ded50ab25e44f531ac58b4
 DIST acml-4-1-0-ifort-64bit.tgz 36577689 SHA256 b5b60425fccb624e3baf48f5d51ae68ccdc3e9852a4a50661bb3e45a6f25be40
 EBUILD acml-3.6.1-r1.ebuild 4917 SHA256 8033f273173a3d191981fd57f37aecc478ad2c12b147498c4c19183f57e6314a SHA512 c9c64c7ea7badb3a239a4563e9f8d84768ae7961e36a1be1e12ec74c72215cc03344f016dba18da5025ef17ddfd11c9270f607806353fabae22e480bdde69d34 WHIRLPOOL 9487cdfd1d60d394835623855ffd9724ce95596711223d940b1a64d731642bbfbf32c447fd709e8fceafe364515eb519cc79e0e0e07cbc9007a70dd6dc5886c9
 EBUILD acml-4.0.1.ebuild 4870 SHA256 658dc02c59e59c93b011e6bcaeaf81f34338b0053879ab9178be29f3a4eb3e9d SHA512 9cbb1640fede897d42a95a0b4960b7f85977880770abc2cbdd22d73374fa280771fcd3aaec6678bdff04dfd9c10984ca576a1f7de365874bca1518e2017412c9 WHIRLPOOL e27cb4eeb387815e3e1a6c2f4254c63ae4557e7580891b6a1ddebb6d6bd65ee7a0141bea4227e0440afbcf49ffdbea1d4dfb8b1b97ef92a54aec5205246428f2
-EBUILD acml-4.1.0-r1.ebuild 5517 SHA256 3d07bde24d292dae6f48a436f1fde0d94572702bf2e161e12181e12c04abbf2f SHA512 08b7856f970111f339bf1b931fa60aa37c338d6a3e5c2f517b1fb3f105a6ce088de5914481fb58f3be22f53e06746d71f274ef2c213390afe3c8e3eb17a1e36a WHIRLPOOL c52a8af8735ad82f7ce3f3c580d8802a578355bc80b874d5615c6f577591780e1fcfc542fc641858b946354e8f5274608dff26b1a622bf83219e7ff9acacf1c7
-MISC ChangeLog 8820 SHA256 2aa19d554f5629ba729c953b5eae4d2ef13de659853a52b579ed58a67167ee44 SHA512 0fbd5bb1bdeec30f1adb77f242b025aef40e94fffdee129fc799504b80e8bc521627e87a0ff555e62c717f3a4892b99ed20454ec03666894d1817a3ea05f9110 WHIRLPOOL 91f31f1737fa30e99d788581a8ad072879775700022a3fbab5dd8a6b0cf4120bb273fba34c37556f429632f03d8fd46a527806cd2c1c835d5aa8f7de3ea0671f
-MISC metadata.xml 1078 SHA256 fc81dc030da0c7b425e1b544ec8f8bfe9e1aba19bd56062634771b7d663479d1 SHA512 6185c444d2f050c10362093b0c3e484cb2cc3ed40defa0d25d8f634e6f05f2ff000d727dbe43aa54d48071bd0e75fee69626e8bd9f44be99377c548092c84886 WHIRLPOOL 431922c65381d8d7c9221745a8c9501a3e354c3f9d60b11e8aa0892f602bb0855018a2ff045629d72658a636cf0cfbce1445b0727c547fd13aa1c4533825fce1
+EBUILD acml-4.1.0-r1.ebuild 5510 SHA256 654c9e68a87cc44d99805084f007c5d694a551e00c312d7aa71f2cdb7b4a4f5b SHA512 3ac1ec6b6cb931198cb6b9ac2ac15cd375e3b7bdb67ccdc5739b5899ddf963fee8c2d6980a28be1a85879951a30aa46bc4c22fa5d5cb05b8c5fa8f0a7805c09b WHIRLPOOL 565ac69d049abcb0a85edaaa90a504823f737e52be7f8f20811c2fd3c6e326f523ad62864a9371ab965a8be3118f5a658cfc880152e15c657b0c7ba8ae40df5e
+MISC ChangeLog 8924 SHA256 f4c4badb37dee31cba8b44f6cf1a292948bf838c7bfa993765f67f0bf6cc9aab SHA512 e6320e75fcd6176b4475da4972d650391017632b87cf197245370d9e1f55469ff45a9e95f7a34a6eabe61f2353acf4f188a4c596e1a71bcd8415c95e587719d7 WHIRLPOOL fa038ada90c7794b397734b35825dad88b6c085f7350c4feca606643fe512bf512bbd1e67069262193e292b805cd3d54a10b31e071f0329d500d7318d69b5658
+MISC metadata.xml 1089 SHA256 f2c40b20cf49369672d12c77766bbd3de2a518266966615c57a955056bef7fe2 SHA512 2f10c9aaaa74a82eb04839e6cebb5e3cd82d8aa41ad12b4c979d28fde4746049a8addb7bebb41eeebbe9caae38e75778b92f278192eada91c81e75f3fe342d26 WHIRLPOOL c76c719ab4977f6750af73070f80be6c127e02a3e4e9c9f53d575e32f15c95007cfd8bf22a176434466c19aa8e4cdb6efa425f443a29641b9853cda4fc50ed55
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJU2bbqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirWGoQAI4B5UmRxCL/W6XBD8gAhPby
+w2MD8Fn2XyR5fc4/bax6lazel0SkCN0TRazSjUz4vappJ+Zxz2rPmpZaUArPxCNV
+R1vQhgoTDQn7wPIEp4qVdOaJ9e0EmOsU/L1mN1V2amnI33E8xT0CCZ6ArsWOAhp8
+rzo0NSWoth75YVOvAkEwIJcTzh3hlfMPLedfY7zE0Xi8Vb7sO6QnfRtuPezAytIS
+yV4wSNFohO+HlDhvCQgaD8Cz5Ku4jUJe1QscNH9Fj3XvlIJSZY0ukHYe//JalmzC
+bEJLZXK1AEZCjC5MGUSugXi//xqJBT8jhfhcdLzKs2jJTYYLbeJTtXiKU3NPL6YS
+bR19c9V33PBqSP23V2sjNkHo4MUV8SZZJDIjfIXCvno/Z39aq6Ssq4gqo75Cox2f
+XEuiviWZ1j4p3SJxHvtbPfh7/msIHm09EKwUWf0WrJNbIPjNlEWqytV3wfgt2fw2
+Czl2PfHLJYNMAH1o9oMPb7LSiDpYap2pPuio6PJj6imdENMVvBj26JP7OymDBjXP
+e/RSV36ckJIVZh1l7E0Nklzal9/YPMv3bS8VDQieI5f8ZDfXDZQ+k93vXPJ3bhOz
+oIthzo8UB3x7ifMBd/qHdBBFzF3AJUdrNeV5Wqmn5cvZP79/3ODkvyqY/ocEIfuK
+bMysYjc6aLhEsy4g+j29
+=0MGU
+-----END PGP SIGNATURE-----
