@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/acml/acml-4.1.0-r1.ebuild,v 1.11 2015/02/10 02:27:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/acml/acml-4.1.0-r1.ebuild,v 1.12 2015/02/10 07:44:41 jlec Exp $
 
 EAPI=1
 
@@ -33,8 +33,8 @@ RESTRICT="strip fetch"
 
 CDEPEND="
 	ifc? ( dev-lang/ifc )
-	gfortran? ( sys-devel/gcc:4.2.4 )
-	!gfortran? ( !ifc? ( sys-devel/gcc:4.2.4 ) )"
+	gfortran? ( sys-devel/gcc:4.2 )
+	!gfortran? ( !ifc? ( sys-devel/gcc:4.2 ) )"
 
 DEPEND="test? (	${CDEPEND} )
 	app-admin/eselect-blas
