@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>sci</herd>
-	<longdescription lang="en">
+  <herd>sci</herd>
+  <longdescription lang="en">
 	The AMD(R) Core Math Library provides an implementation of the "Basic
 	Linear Algebra Subprograms" (BLAS) and the "Linear Algebra PACKage"
 	(LAPACK) as well as a set of "Fast Fourier Transformation" (FFT)
 	routines, all highly optimized for AMD(R) x86 and amd64 CPUs.
 </longdescription>
-	<longdescription lang="de">
+  <longdescription lang="de">
 	Die AMD(R) Core Math Library ist ein Ersatz für die "Basic Linear
 	Algebra Subprograms" (BLAS) und das "Linear Algebra PACKage" (LAPACK).
 	Außerdem enthält sie Routinen zur "Fast Fourier Tranformation" (FFT).
 	Alle Routinen sind hoch optimiert für AMD(R) x86 und amd64 CPUs.
 </longdescription>
-	<use>
-		<flag name="gfortran">Fetch and install acml compiled with GNU gfortran</flag>
-		<flag name="ifc">Fetch and install acml compiled with Intel Fortran Compiler
+  <use>
+    <flag name="gfortran">Fetch and install acml compiled with GNU gfortran</flag>
+    <flag name="ifc">Fetch and install acml compiled with Intel Fortran Compiler
     (<pkg>dev-lang/ifc</pkg>)</flag>
-		<flag name="int64">Install the 64 bits integer library</flag>
-	</use>
+    <flag name="int64">Install the 64 bits integer library</flag>
+  </use>
 </pkgmetadata>
