@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/acml
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/acml/ChangeLog,v 1.46 2015/02/10 02:27:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/acml/ChangeLog,v 1.47 2015/02/10 07:44:41 jlec Exp $
+
+  10 Feb 2015; Justin Lecher <jlec@gentoo.org> acml-4.1.0-r1.ebuild,
+  metadata.xml:
+  Revert last change
 
   10 Feb 2015; Patrick Lauer <patrick@gentoo.org> acml-4.1.0-r1.ebuild:
   Fix gcc slot to match toolchain changes
