@@ -1,6 +1,13 @@
 # ChangeLog for media-fonts/terminus-font
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.103 2015/02/08 19:39:17 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.104 2015/02/10 07:43:14 yngwin Exp $
+
+*terminus-font-4.39-r1 (10 Feb 2015)
+
+  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> +terminus-font-4.39-r1.ebuild,
+  metadata.xml:
+  Add pcf-unicode-only useflag, enabled by default (bug #520222). Bump EAPI to
+  5. Alphabetize USE flags listing.
 
   08 Feb 2015; Mike Gilbert <floppym@gentoo.org> terminus-font-4.39.ebuild:
   Install 75-yes-terminus.conf.
